--- a/tasks_config.yaml
+++ b/tasks_config.yaml
@@ -1,9 +1,20 @@
 ---
 Task1:
-  TaskName: "TOF_Task"
-  TaskEntryPtr: "tof_task"
+  TaskName: "RGB_Task"
+  TaskEntryPtr: "rgb_task"
   PeriodicityInMS: 33
   ParametersPtr: 0
-  StackSize: 32 * 1024
-  TaskPriority: 4
+  StackSize: STACK_SIZE_MEDIUM
+  TaskPriority: 2
   TaskHandle: "nullptr"
+  Core: "M7"
+
+# Task2:
+#   TaskName: "TOF_Task"
+#   TaskEntryPtr: "tof_task"
+#   PeriodicityInMS: 33
+#   ParametersPtr: 0
+#   StackSize: 32 * 1024
+#   TaskPriority: 4
+#   TaskHandle: "nullptr"
+#   Core: "M7"
